<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="11"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/background1" >
    <!--  Taking out the background picture for now
    android:background="@drawable/clipboard_with_pencil"
    -->

    <TextView
        android:id="@+id/idName"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:text="@string/Name" />

    <EditText
        android:id="@+id/idNameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/idAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address" />

    <EditText
        android:id="@+id/idAddressBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Birthdate" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="215dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Telephone" />

    <EditText
        android:id="@+id/idNumberBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/ButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save" />

    <Button
        android:id="@+id/ButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel" />

</LinearLayout>